Update: Fix worker errors, notification triggers, profile icons, and UI improvements

--- a/ats-resume-optimizer/package.json
+++ b/ats-resume-optimizer/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "axios": "^1.13.2",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
@@ -24,6 +25,7 @@
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
     "expo-notifications": "~0.32.16",
+    "expo-print": "~15.0.8",
     "expo-router": "~6.0.21",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
@@ -35,7 +37,9 @@
     "react-hook-form": "^7.71.0",
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dates": "^0.23.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
