--- a/ats-resume-optimizer/GoogleService-Info.plist
+++ b/ats-resume-optimizer/GoogleService-Info.plist
@@ -26,5 +26,9 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:776583109504:ios:5a839780e5b2147841ff65</string>
+    <key>REVERSED_CLIENT_ID</key>
+    <string>com.googleusercontent.apps.776583109504-j4tdkj2e7oiore61l1q8m61b8v5po7nl</string>
+    <key>CLIENT_ID</key>
+    <string>776583109504-j4tdkj2e7oiore61l1q8m61b8v5po7nl.apps.googleusercontent.com</string>
 </dict>
 </plist>
